# bebop_controller

./: CMakeLists.txt  README.md  package.xml
doc/output/html/: _form0_tmp.ps  _formulas.dvi  _formulas.tex  annotated.html  annotated_dup.js  base__controller_8cpp.html  base__controller_8cpp_source.html  base__controller_8h.html  base__controller_8h_source.html  citc_2.html  citc__controller__angles_8cpp.html  citc__controller__angles_8cpp.js  citc__controller__angles_8h.html  citc__controller__angles_8h_source.html  citc__controller__angles_8launch.html  citc__controller__angles_8launch_source.html  citc__controller__angles_8yaml_source.html  citc__controller__twist_8h.html  citc__controller__twist_8h.js  (+120 more)
doc/source/: documentation.md
docs/: base__controller_8h.js  citc_1.html  citc__controller__angles_8cpp_source.html  citc__controller__angles_8h.js  citc__controller__angles_8yaml.html  citc__controller__twist_8cpp.html  citc__controller__twist_8cpp.js  citc__controller__twist_8cpp_source.html  citc__controller__twist_8launch.html  citc__controller__twist_8launch_source.html  citc__controller__twist_8yaml.html  classbebop__controller_1_1_base_controller-members.html  classbebop__controller_1_1_base_controller.html  classbebop__controller_1_1_base_controller.js  classbebop__controller_1_1_c_i_t_c_controller.html  classbebop__controller_1_1_c_i_t_c_controller.js  classbebop__controller_1_1_data_to_c_s_v.html  classbebop__controller_1_1_data_to_c_s_v.js  classbebop__controller_1_1_p_i_d_controller.html  classbebop__controller_1_1_p_i_d_controller.js  classbebop__controller_1_1_proportional_controller-members.html  classbebop__controller_1_1_proportional_controller.html  classbebop__controller_1_1_sinusoidal.html  classbebop__controller_1_1_square_root_controller-members.html  classbebop__controller_1_1_square_root_controller.html  classbebop__controller_1_1_waypoint.html  classgazebo_1_1_sphinx_publisher.html  classplot_1_1_plots.js  common_8h.js  common_8h_source.html  cpp_pid_1.html  cpp_pid_2.html  cpp_sin.html  data__to__csv_8cpp.js  data__to__csv_8h.html  dir_072a0b4abfe99924a9cf2cb96db2166e.html  dir_0aacf3aed1a5c7085b23ed9486273ee2.html  dir_0aacf3aed1a5c7085b23ed9486273ee2.js  dir_1ac2fdee2362a08fc0358dcef45d782c.html  dir_81025302fd592f43a2d7c4fbb7eea7b8.html  (+82 more)
docs/search/: all_1.js  all_10.js  all_15.js  all_17.js  all_18.js  all_19.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_2.js  defines_0.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  defines_8.js  enumvalues_1.js  files_1.js  files_3.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_9.js  functions_a.js  namespaces_1.js  pages_1.js  pages_3.js  pages_5.js  (+12 more)
include/bebop_controller/: base_controller.h  common.h  waypoint.h
launch/: citc_controller_angles.launch  citc_controller_twist.launch  gazebo.launch  pid_controller_angles.launch  pid_controller_twist.launch  proportional_controller.launch  square_root_controller.launch  vrpn_client_ros.launch
resource/: citc_controller_angles.yaml  citc_controller_twist.yaml  max_speed.yaml  normalize_angles.yaml  normalize_twist.yaml  pid_controller_angles.yaml  pid_controller_twist.yaml  proportional_controller.yaml  safe_zone.yaml  square_root_controller.yaml  topics.yaml  trajectory.yaml  waypoint.yaml
scripts/: gazebo.py  plot.py
src/nodes/: citc_controller_angles.cpp  citc_controller_angles.h  citc_controller_twist.cpp  citc_controller_twist.h  data_to_csv.cpp  data_to_csv.h  pid_controller_angles.cpp  pid_controller_angles.h  pid_controller_twist.cpp  pid_controller_twist.h  proportional_controller.cpp  proportional_controller.h  sinusoidal.cpp  sinusoidal.h  square_root_controller.cpp  square_root_controller.h
(+199 files in other folders)
